--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fancyapps/ui": "^5.0.19",
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "fancybox": "^3.0.1",
+    "json-server": "^0.17.3",
+    "swiper": "^9.2.4",
     "vue": "^3.2.13",
     "vuex": "^4.0.0"
   },
